Menu atualizado e responsividade melhorada

--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
                             <div class="trace"></div>
                             <div class="trace"></div>
                         </label>
-                        <div class="menu"></div>
-                        <nav class="menuItens">
-                             <!--<ul>
-                                <li>
-                                    <a href=".">Home</a>
-                                 </li>
-                                <li>
-                                    <a href=".">Sobre</a>
-                                 </li>
-                                 <li>
-                                    <a href=".">Projetos</a>
-                                </li>
-                            </ul> -->
-                        </nav>
+                        <div class="menu">
+                            <nav class="menuItens">
+                                <ul class="menuItensLista">
+                                    <li id>
+                                       <a href=".">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href=".">Sobre</a>
+                                     </li>
+                                    <li>
+                                       <a href=".">Projetos</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
             <h1>Erick Saymon</h1>
             <h2>Back-end Developer</h2>
             <div class="socialMedia">
-                <a href="#">Linkedin</a>
-                <a href="#">GitHub</a>
+                <a href="https://linkedin.com/in/erick-saymon-contadini-markoviscz-572155288/" target="_blank">Linkedin</a>
+                <a href="https://github.com/ErickSaymon" target="_blank">GitHub</a>
             </div>
         </header>
         <main class="container">
