pequenas mudancas no codigo e responsivo para telas maiores.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     </div>
                 </div>
             </div>
-            <h1>Erick Saymon</h1>
-            <h2>Back-end Developer</h2>
+            <h1 class="nome">Erick Saymon</h1>
+            <h2 class="funcao">Back-end Developer</h2>
             <div class="socialMedia">
                 <a href="https://linkedin.com/in/erick-saymon-contadini-markoviscz-572155288/" target="_blank">Linkedin</a>
                 <a href="https://github.com/ErickSaymon" target="_blank">GitHub</a>
